Credits for graphics

--- a/README
+++ b/README
@@ -2,3 +2,5 @@ A little platformer game.
 
 Works on my machine.
 
+Graphics from Buch (http://blog-buch.rhcloud.com).
+See http://opengameart.org/content/a-platformer-in-the-forest.
