Add youtube link.

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Towards a little platformer game.
 
-Works on my machine.
+Works on my machine (https://youtu.be/fdh6f4lk0ho).
 
 Graphics from Buch (http://blog-buch.rhcloud.com).
 See http://opengameart.org/content/a-platformer-in-the-forest.
