Broken link: use profile page instead

--- a/README
+++ b/README
@@ -2,5 +2,5 @@ Towards a little platformer game.
 
 Works on my machine (https://youtu.be/fdh6f4lk0ho).
 
-Graphics from Buch (http://blog-buch.rhcloud.com).
+Graphics from [Buch](http://opengameart.org/users/buch).
 See http://opengameart.org/content/a-platformer-in-the-forest.
